# PaintCourseWork

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
app/: CMakeLists.txt  main.cpp
